# swc-plugin-import-meta-env

./: .gitignore  .release-it.json  .rustfmt.toml  .tool-versions  CHANGELOG.md  Cargo.toml  README.md  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: release.yml  test.yml
src/: lib.rs
tests/integration/: jest.config.cjs
tests/integration/src/: javascript.test.js  jsx.test.jsx  tsx.test.tsx  typescript.test.ts
