[package]
name = "swc_plugin_import_meta_env"
version = "1.5.7"
edition = "2021"
authors = ["Alex Miller <codex.nz@gmail.com>"]
description = "SWC plugin for handling the transformation of import.meta.env"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_core = { version = "0.92.6", features = [
    "ecma_plugin_transform",
    "trace_macro",
] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }

[profile.release]
codegen-units = 1
# debug = true
lto = true
opt-level = "s"
strip = "symbols"
